# netorc

./: .gitignore  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  requirements.txt  settings.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-compose-dev.yml  docker-compose.yml  main.yml
api/: Dockerfile  headers.py  main.py
api/services/: admin.py  service.py
api_service/: headers.py  main.py
api_service/service/: activation.py
api_service/services/: service.py
api_service/tmforum/: general.py  tmf653.py
controller/: settings.py
controller/api/: data.py  main.py  task.py
controller/metrics/: logger.py
controller/misc/: celery.py  dependencies.py  task_lock.py
core/addons/: decorators.py  exceptions.py  tasklock.py
core/db/: __init__.py  migrate.py  models.py  tables.py
core/metrics/: logging.py
core/security/: passwd.py  password.py  secret.py  user.py
core/task/: __init__.py  decorators.py  lock.py
miscellaneous/addons/: celery.py  decorators.py  exceptions.py  tasklock.py  tmf.py
miscellaneous/database/: crud.py  db.py  models.py  schemas.py  tables.py
miscellaneous/landing/page/css/: main.css
miscellaneous/landing/page/html/: landing.html
miscellaneous/metrics/: logging.py
tests/core/: test_db.py  test_redis.py
tests/unit/: test_decorators.py  test_secret.py  test_settings.py
tests/worker/: test_lock.py
worker/: Dockerfile
worker/tasks/: example.py
worker_service/tasks/: example.py
